[metadata]
name = guessinggame
version = 0.1.0
author = Joshua McCormick
author_email = joshuajmccormick@ksu.edu
description = A guessing game.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/K-State-Computational-Core/example-10-releases-python-joshua-mccormick
project_urls =
    Bug Tracker = https://github.com/K-State-Computational-Core/example-10-releases-python-joshua-mccormick/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include-package_data = True

[options.package_data]
guessinggame = py.typed